WebKit/win/WebDatabaseManager.cpp
@@ -370,16 +370,16 @@ void WebDatabaseManager::dispatchDidModifyDatabase(SecurityOrigin* origin, const
     notifyCenter->postNotificationName(databaseDidModifyOriginName, securityOrigin.get(), userInfoBag.get());
 }
 
-void WebKitSetWebDatabasesPathIfNecessary()
+void WebKitInitializeWebDatabasesIfNecessary()
 {
-    static bool pathSet = false;
-    if (pathSet)
+    static bool initialized = false;
+    if (initialized)
         return;
 
     WebCore::String databasesDirectory = WebCore::pathByAppendingComponent(WebCore::localUserSpecificStorageDirectory(), "Databases");
-    WebCore::DatabaseTracker::tracker().setDatabaseDirectoryPath(databasesDirectory);
+    WebCore::DatabaseTracker::initializeTracker(databasesDirectory);
 
-    pathSet = true;
+    initialized = true;
 }
 
 #endif
