third_party/WebKit/WebCore/storage/DatabaseTracker.h
@@ -59,6 +59,7 @@ struct SecurityOriginTraits;
 
 class DatabaseTracker : public Noncopyable {
 public:
+    static void initializeTracker(const String& databasePath);
     static DatabaseTracker& tracker();
     // This singleton will potentially be used from multiple worker threads and the page's context thread simultaneously.  To keep this safe, it's
     // currently using 4 locks.  In order to avoid deadlock when taking multiple locks, you must take them in the correct order:
@@ -78,7 +79,7 @@ public:
     void databaseChanged(Database*);
 
 private:
-    DatabaseTracker();
+    DatabaseTracker(const String& databasePath);
 
     typedef HashSet<Database*> DatabaseSet;
     typedef HashMap<String, DatabaseSet*> DatabaseNameMap;
