third_party/WebKit/WebCore/storage/chromium/DatabaseTrackerChromium.cpp
@@ -49,11 +49,11 @@ namespace WebCore {
 
 DatabaseTracker& DatabaseTracker::tracker()
 {
-    DEFINE_STATIC_LOCAL(DatabaseTracker, tracker, ());
+    DEFINE_STATIC_LOCAL(DatabaseTracker, tracker, (""));
     return tracker;
 }
 
-DatabaseTracker::DatabaseTracker()
+DatabaseTracker::DatabaseTracker(const String&)
 {
     SQLiteFileSystem::registerSQLiteVFS();
 }
